# tauri-plugin-billing

./: Cargo.toml  LICENSE  README.md  build.rs  package.json  pnpm-lock.yaml
android/: build.gradle.kts
android/src/main/java/: BillingPlugin.kt
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: consume.toml  create_purchase.toml  get_all_purchases.toml  get_price.toml  get_product.toml  initiate_purchase.toml
permissions/schemas/: schema.json
src/: commands.rs  lib.rs  mobile.rs  models.rs
